[project]
name = "code-review-ai"
version = "0.1.0"
description = "A minimal AI-powered code review CLI that reviews Git diffs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
]

[project.scripts]
review-ai = "code_review_ai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_review_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
